force creating links when configuring development environment

--- a/README
+++ b/README
@@ -8,12 +8,12 @@ rm -rf aclocal.m4 autom4te.cache bin/Makefile.in compile configure depcomp insta
 # development environment
 # shflags must be at /usr/share/shflags/shflags.sh
 echo mkdir -p /usr/share/freecwmp/functions/
-echo ln -s `pwd`/ext/openwrt/scripts/defaults /usr/share/freecwmp/defaults
-echo ln -s `pwd`/ext/openwrt/scripts/functions/common /usr/share/freecwmp/functions/common
-echo ln -s `pwd`/ext/openwrt/scripts/functions/device_info /usr/share/freecwmp/functions/device_info
-echo ln -s `pwd`/ext/openwrt/scripts/functions/lan_device /usr/share/freecwmp/functions/lan_device
-echo ln -s `pwd`/ext/openwrt/scripts/functions/management_server /usr/share/freecwmp/functions/management_server
-echo ln -s `pwd`/ext/openwrt/scripts/functions/voice_service /usr/share/freecwmp/functions/voice_service
-echo ln -s `pwd`/ext/openwrt/scripts/functions/wan_device /usr/share/freecwmp/functions/wan_device
-echo ln -s `pwd`/ext/openwrt/scripts/functions/x_freecwmp_org /usr/share/freecwmp/functions/x_freecwmp_org
+echo ln -sf `pwd`/ext/openwrt/scripts/defaults /usr/share/freecwmp/defaults
+echo ln -sf `pwd`/ext/openwrt/scripts/functions/common /usr/share/freecwmp/functions/common
+echo ln -sf `pwd`/ext/openwrt/scripts/functions/device_info /usr/share/freecwmp/functions/device_info
+echo ln -sf `pwd`/ext/openwrt/scripts/functions/lan_device /usr/share/freecwmp/functions/lan_device
+echo ln -sf `pwd`/ext/openwrt/scripts/functions/management_server /usr/share/freecwmp/functions/management_server
+echo ln -sf `pwd`/ext/openwrt/scripts/functions/voice_service /usr/share/freecwmp/functions/voice_service
+echo ln -sf `pwd`/ext/openwrt/scripts/functions/wan_device /usr/share/freecwmp/functions/wan_device
+echo ln -sf `pwd`/ext/openwrt/scripts/functions/x_freecwmp_org /usr/share/freecwmp/functions/x_freecwmp_org
 echo uci_options=\"-c `pwd`/ext/openwrt/config\"
